[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Enemy/Horda/Minion/scrHordaMinion.gd" type="Script" id=1]
[ext_resource path="res://Objects/Enemy/Horda/sprHorda.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.0575
height = 69.728

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.8357
height = 0.0

[node name="oHordaMinion" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
script = ExtResource( 1 )

[node name="minionCol" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 1 )

[node name="minionHitbox" type="Area2D" parent="." groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3

[node name="hitboxCol" type="CollisionShape2D" parent="minionHitbox"]
position = Vector2( -36.7696, 0 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="minionHitbox2" type="Area2D" parent="." groups=[
"Enemy",
]]
position = Vector2( 77.0746, 0 )
collision_layer = 4
collision_mask = 3

[node name="hitboxCol" type="CollisionShape2D" parent="minionHitbox2"]
position = Vector2( -36.7696, 0 )
rotation = 1.57079
shape = SubResource( 2 )

[node name="minionSprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 42.202, 155.375, 416.25, 192.375 )

[connection signal="area_entered" from="minionHitbox" to="." method="_on_minionHitbox_area_entered"]
[connection signal="area_entered" from="minionHitbox2" to="." method="_on_minionHitbox2_area_entered"]
